[package]
name = "overdriven"
version = "0.1.1"
edition = "2021"
rust-version = "1.56"
authors = ["sugmaboy<jjmartinodev@outlook.com>"]
readme = "README.md"
license-file = "LICENSE"
description = "a wgpu context creator"
repository = "https://github.com/jjmartinodev/overdriven"
keywords = ["gfx","graphics"]
categories = ["graphics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version = "1.14.0", features = ["derive"]}
pollster = "0.3.0"
winit = "0.28.0"
wgpu = "0.18.0"

[[test]]
name = "test"
path = "test/main.rs"
harness = false
